syntax = "proto3";

package sharing.service.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// Template Service - manages email templates for sharing
service SharingTemplateService {
  // Create a new email template
  rpc CreateTemplate(CreateTemplateRequest) returns (CreateTemplateResponse) {
    option (google.api.http) = {
      post: "/v1/templates"
      body: "*"
    };
  }

  // Get a template by ID
  rpc GetTemplate(GetTemplateRequest) returns (GetTemplateResponse) {
    option (google.api.http) = {
      get: "/v1/templates/{id}"
    };
  }

  // List templates for the current tenant
  rpc ListTemplates(ListTemplatesRequest) returns (ListTemplatesResponse) {
    option (google.api.http) = {
      get: "/v1/templates"
    };
  }

  // Update a template
  rpc UpdateTemplate(UpdateTemplateRequest) returns (UpdateTemplateResponse) {
    option (google.api.http) = {
      put: "/v1/templates/{id}"
      body: "*"
    };
  }

  // Delete a template
  rpc DeleteTemplate(DeleteTemplateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/templates/{id}"
    };
  }

  // Preview a template with sample data
  rpc PreviewTemplate(PreviewTemplateRequest) returns (PreviewTemplateResponse) {
    option (google.api.http) = {
      post: "/v1/templates/preview"
      body: "*"
    };
  }
}

// Email template entity
message EmailTemplate {
  string id = 1 [json_name = "id"];
  uint32 tenant_id = 2 [json_name = "tenantId"];
  string name = 3 [json_name = "name"];
  string subject = 4 [json_name = "subject"];
  string html_body = 5 [json_name = "htmlBody"];
  bool is_default = 6 [json_name = "isDefault"];
  optional uint32 created_by = 7 [json_name = "createdBy"];
  optional uint32 updated_by = 8 [json_name = "updatedBy"];
  google.protobuf.Timestamp create_time = 9 [json_name = "createTime"];
  optional google.protobuf.Timestamp update_time = 10 [json_name = "updateTime"];
}

// Request to create a template
message CreateTemplateRequest {
  string name = 1 [
    json_name = "name",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 255
    }
  ];

  string subject = 2 [
    json_name = "subject",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 1024
    }
  ];

  string html_body = 3 [
    json_name = "htmlBody",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 65536
    }
  ];

  bool is_default = 4 [json_name = "isDefault"];
}

message CreateTemplateResponse {
  EmailTemplate template = 1 [json_name = "template"];
}

// Request to get a template
message GetTemplateRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];
}

message GetTemplateResponse {
  EmailTemplate template = 1 [json_name = "template"];
}

// Request to list templates
message ListTemplatesRequest {
  optional uint32 page = 1 [json_name = "page"];
  optional uint32 page_size = 2 [json_name = "pageSize"];
}

message ListTemplatesResponse {
  repeated EmailTemplate templates = 1 [json_name = "templates"];
  uint32 total = 2 [json_name = "total"];
}

// Request to update a template
message UpdateTemplateRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  optional string name = 2 [
    json_name = "name",
    (buf.validate.field).string = {
      min_len: 1
      max_len: 255
    }
  ];

  optional string subject = 3 [
    json_name = "subject",
    (buf.validate.field).string = {
      min_len: 1
      max_len: 1024
    }
  ];

  optional string html_body = 4 [
    json_name = "htmlBody",
    (buf.validate.field).string = {
      min_len: 1
      max_len: 65536
    }
  ];

  optional bool is_default = 5 [json_name = "isDefault"];
}

message UpdateTemplateResponse {
  EmailTemplate template = 1 [json_name = "template"];
}

// Request to delete a template
message DeleteTemplateRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];
}

// Request to preview a template
message PreviewTemplateRequest {
  string subject = 1 [
    json_name = "subject",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 1024
    }
  ];

  string html_body = 2 [
    json_name = "htmlBody",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 65536
    }
  ];
}

message PreviewTemplateResponse {
  string rendered_subject = 1 [json_name = "renderedSubject"];
  string rendered_body = 2 [json_name = "renderedBody"];
}
